--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.1.1/flowbite.min.js"></script>
 
+    <meta
+      name="keywords"
+      content="Unlimited Payroll Processing, Staff Management, Made Simple, Budget Monitoring and Optimization, User-Friendly Interface, Comprehensive Reporting and Tax Compliance, Accurate Payment Calculation, Expertise, Innovation, Cost-Effective"
+    />
     <title>React App</title>
   </head>
   <body>
